@@ -94,6 +94,7 @@ VERSION 2.6-Beta 1
       "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.
 
   BUGFIXES:
+    * Fix problem building tests with google mock 1.6.0 on Ubuntu
     * Fix dynamic playlist album play bias with MetaProxy::Tracks.
     * Transcoding: fix compatibility with libav's ffmpeg. (BR 300551)
     * Saved lyrics are preserved when the track is moved. (BR 242350)
